# Parallel-programming-project

./: .gitignore  baseline_results.csv  pyproject.toml  variant_a_results.csv  variant_a_results_v2.csv  variant_a_results_v3.csv
src/: version_a.py  vra.py
src/baseline/: baseline.py
variant_c/: baseline.py
