[project]
name = "pp-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.7.0",
    "protobuf>=7.34.0",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.6.0",
    "sacremoses>=0.1.1",
    "sentencepiece>=0.2.1",
    "torch>=2.10.0",
    "transformers>=5.3.0",
]
